--- a/style.sass
+++ b/style.sass
@@ -32,8 +32,6 @@ input
 
 .new-wheel
     display: none
-    opacity: 0
-    transition: 0.5s
 
 .wheel-type
     font-weight: 600
@@ -67,7 +65,6 @@ input
     display: flex
     margin-top: 30px
     font-weight: 600
-    border: 2px solid lawngreen
     justify-content: space-between
     min-height: 100vh
 
@@ -81,7 +78,6 @@ input
             position: absolute
             top: calc(50% - 24px)
             transform: rotate(270deg)
-            right: -46px
             z-index: 5
 
         canvas
@@ -95,6 +91,9 @@ input
     .actual
         width: 30%
         // border: 2px solid red
+
+        span
+            padding-left: 10px
 
         .drawnElementsList
             list-style: none
