--- a/style.sass
+++ b/style.sass
@@ -74,10 +74,11 @@ input
         margin: 20px
         position: relative
 
-        .fa-galactic-senate
+        img
+            width: 80px
+            height: 20px
             position: absolute
-            top: calc(50% - 24px)
-            transform: rotate(270deg)
+            top: calc(50% - 10px)
             z-index: 5
 
         canvas
