--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #eee;
+  background-color: azure;
   font-family: lato;
   color: #003f8a;
 }
@@ -151,5 +151,72 @@ input {
   border-bottom: 2px solid #0069D9;
   padding-top: 10px;
   font-size: 15px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .container .actual {
+    width: 100%;
+  }
+}
+
+@media (max-width: 850px) {
+  .container .canvasContainer img {
+    width: 40px;
+  }
+}
+
+@media (max-width: 500px) {
+  h1 {
+    color: white;
+    padding: 15px;
+    border: 3px solid white;
+    border-radius: 20px;
+    font-size: 25px;
+  }
+  .container .canvasContainer canvas {
+    padding: 10px;
+    background-color: #ccc;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: 4s;
+    transition: 4s;
+    border: 5px dotted black;
+    border-radius: 50%;
+  }
+  .container .canvasContainer img {
+    width: 20px;
+  }
+  .container .actual {
+    width: 100%;
+    font-size: 15px;
+  }
+  .container .actual h2 {
+    font-size: 20px;
+    font-weight: 700;
+  }
+  .container .actual span {
+    padding-left: 10px;
+  }
+  .container .actual .drawnElementsList {
+    list-style: none;
+    font-size: 15px;
+  }
+  .container .actual .drawnElementsList li:first-child {
+    font-size: 15px;
+  }
+  .container .actual .drawnElementsList li {
+    border-bottom: 2px solid #0069D9;
+    padding-top: 10px;
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
