--- a/style.sass
+++ b/style.sass
@@ -5,7 +5,7 @@
     text-align: center
 
 body
-    background-color: #eee
+    background-color: azure
     font-family: lato
     color: #003f8a
 
@@ -107,3 +107,61 @@ input
                 border-bottom: 2px solid #0069D9
                 padding-top: 10px
                 font-size: 15px
+
+@media (max-width: 1200px)
+    .container
+        flex-direction: column
+        justify-content: flex-start
+
+        .actual
+            width: 100%
+
+@media (max-width: 850px)
+    .container
+        .canvasContainer
+            img
+                width: 40px
+
+@media (max-width: 500px)
+    h1
+        color: white
+        padding: 15px
+        border: 3px solid white
+        border-radius: 20px
+        font-size: 25px
+
+    .container
+        .canvasContainer
+            canvas
+                padding: 10px
+                background-color: #ccc
+                transform: rotate(0deg)
+                transition: 4s
+                border: 5px dotted black
+                border-radius: 50%
+
+            img
+                width: 20px
+
+        .actual
+            width: 100%
+            font-size: 15px
+
+            h2
+                font-size: 20px
+                font-weight: 700
+
+            span
+                padding-left: 10px
+
+            .drawnElementsList
+                list-style: none
+                font-size: 15px
+
+                li:first-child
+                    font-size: 15px
+
+                li
+                    border-bottom: 2px solid #0069D9
+                    padding-top: 10px
+                    font-size: 12px
