--- a/style.sass
+++ b/style.sass
@@ -1,3 +1,5 @@
+//variables
+    
 *
     margin: 0
     padding: 0
@@ -6,15 +8,28 @@
 
 body
     background-color: azure
-    font-family: lato
+    font-family: 'Manrope', sans-serif
     color: #003f8a
 
+#wheelSide
+    background-color: #F7F9FC
+    #titleContainer
+        height: 100vh
+
 h1
-    background-color: #0069D9
-    color: white
-    padding: 20px
-    border: 3px solid white
-    border-radius: 20px
+    width: 1000px
+    font-size: 90px
+    text-align: left
+
+#textSide
+    background-color: rgba(#726B00, 0.15)
+
+// h1
+//     background-color: #0069D9
+//     color: white
+//     padding: 20px
+//     border: 3px solid white
+//     border-radius: 20px
 
 input
     border-radius: 5px
@@ -61,12 +76,13 @@ input
         .inputHowMany
             width: 45px
 
-.container
+.container2
     display: flex
     margin-top: 30px
     font-weight: 600
     justify-content: space-between
     min-height: 100vh
+    width: 1500px
 
     .canvasContainer
         display: flex
