--- a/style.sass
+++ b/style.sass
@@ -3,41 +3,56 @@ $cone: #003f8a
 $ctwo:  #726B00
 $cthree: #F7F9FC
 $cfour: #F4F4F3
+$cfive: #A2B4C6
     
 *
     margin: 0
     padding: 0
     box-sizing: border-box
     text-align: center
+    color: $ctwo
 
 body
     background-color: azure
     font-family: 'Manrope', sans-serif
     color: $cone
+    text-align: left
 
 #wheelSide
     background-color: $cthree
+    position: relative
+    #backgroundText
+        img
+            color: black
     #titleContainer
         height: 100vh
+        h1
+            width: 1000px
+            font-size: 90px
+            text-align: left
+        
+        h5
+            text-align: left
 
-    h1
-        width: 1000px
-        font-size: 90px
-        text-align: left
-
-h2
-    color: 
+        #wheel
+            min-width: 750px
+            min-height: 750px
+            width: 750px
+            heigth: 750px
+            background-color: $cfive
 
 #backgroundText
-    position: absolute
+    // position: absolute
 
 #textSide
     background-color: rgba($ctwo, 0.15)
     color: $ctwo
+    padding-left: 100px
 
     >div
         width: 419px
         margin-top: 470px
+        text-align: center
         h1
             font-size: 40px
         #inputs
@@ -45,6 +60,37 @@ h2
                 height: 50px
                 border-radius: 15px
                 background-color: $cfour
+                text-align: left
+                padding-left: 20px
+                font-size: 20px
+                &::placeholder
+                    color: $cfive
+        .fa
+            width: 56px 
+            height: 56px
+            line-height: 56px
+            background: $ctwo
+            color: $cthree
+            margin-left: 30px
+            font-size: 40px
+            font-weight: 300
+    #multiple
+        width: 574px
+        margin-top: 112px
+        h5
+            width: 385px
+        .multiple
+            width: 56px 
+            height: 56px
+            line-height: 56px
+            background: $cthree
+            color: $ctwo
+            margin-left: 30px
+        .multipleActive
+            background: $ctwo
+            color: $cthree
+
+            
 
 
 
@@ -63,144 +109,144 @@ h2
 
 
 
-.piecesForm
-    &>div>label
-        padding-right: 5px
-        font-weight: 600
+// .piecesForm
+//     &>div>label
+//         padding-right: 5px
+//         font-weight: 600
 
-.new-wheel
-    display: none
+// .new-wheel
+//     display: none
 
-.wheel-type
-    font-weight: 600
-    label
-        margin: 0 5px 10px 5px
-        input
-            margin: 0 5px 20px
+// .wheel-type
+//     font-weight: 600
+//     label
+//         margin: 0 5px 10px 5px
+//         input
+//             margin: 0 5px 20px
 
-.nameInputs
-    display: flex
-    margin: 0px auto
-    width: 80%
-    max-width: 1100px
-    padding: 20px
-    flex-wrap: wrap
-    justify-content: center
+// .nameInputs
+//     display: flex
+//     margin: 0px auto
+//     width: 80%
+//     max-width: 1100px
+//     padding: 20px
+//     flex-wrap: wrap
+//     justify-content: center
 
-    div
-        display: flex
-        width: 500px
-        align-items: baseline
-        justify-content: center
+//     div
+//         display: flex
+//         width: 500px
+//         align-items: baseline
+//         justify-content: center
 
-        label
-            padding: 0 5px
+//         label
+//             padding: 0 5px
 
-        .inputHowMany
-            width: 45px
+//         .inputHowMany
+//             width: 45px
 
-.container2
-    display: flex
-    margin-top: 30px
-    font-weight: 600
-    justify-content: space-between
-    min-height: 100vh
-    width: 1500px
+// .container2
+//     display: flex
+//     margin-top: 30px
+//     font-weight: 600
+//     justify-content: space-between
+//     min-height: 100vh
+//     width: 1500px
 
-    .canvasContainer
-        display: flex
-        justify-content: center
-        margin: 20px
-        position: relative
+//     .canvasContainer
+//         display: flex
+//         justify-content: center
+//         margin: 20px
+//         position: relative
 
-        img
-            width: 80px
-            height: 20px
-            position: absolute
-            top: calc(50% - 10px)
-            z-index: 5
+//         img
+//             width: 80px
+//             height: 20px
+//             position: absolute
+//             top: calc(50% - 10px)
+//             z-index: 5
 
-        canvas
-            padding: 20px
-            background-color: #ccc
-            transform: rotate(0deg)
-            transition: 4s
-            border: 5px dotted black
-            border-radius: 50%
+//         canvas
+//             padding: 20px
+//             background-color: #ccc
+//             transform: rotate(0deg)
+//             transition: 4s
+//             border: 5px dotted black
+//             border-radius: 50%
 
-    .actual
-        width: 30%
-        // border: 2px solid red
+//     .actual
+//         width: 30%
+//         // border: 2px solid red
 
-        span
-            padding-left: 10px
+//         span
+//             padding-left: 10px
 
-        .drawnElementsList
-            list-style: none
-            font-size: 25px
+//         .drawnElementsList
+//             list-style: none
+//             font-size: 25px
 
-            li:first-child
-                font-size: 25px
+//             li:first-child
+//                 font-size: 25px
 
-            li
-                border-bottom: 2px solid #0069D9
-                padding-top: 10px
-                font-size: 15px
+//             li
+//                 border-bottom: 2px solid #0069D9
+//                 padding-top: 10px
+//                 font-size: 15px
 
-@media (max-width: 1200px)
-    .container
-        flex-direction: column
-        justify-content: flex-start
+// @media (max-width: 1200px)
+//     .container
+//         flex-direction: column
+//         justify-content: flex-start
 
-        .actual
-            width: 100%
+//         .actual
+//             width: 100%
 
-@media (max-width: 850px)
-    .container
-        .canvasContainer
-            img
-                width: 40px
+// @media (max-width: 850px)
+//     .container
+//         .canvasContainer
+//             img
+//                 width: 40px
 
-@media (max-width: 500px)
-    h1
-        color: white
-        padding: 15px
-        border: 3px solid white
-        border-radius: 20px
-        font-size: 25px
+// @media (max-width: 500px)
+//     h1
+//         color: white
+//         padding: 15px
+//         border: 3px solid white
+//         border-radius: 20px
+//         font-size: 25px
 
-    .container
-        .canvasContainer
-            canvas
-                padding: 10px
-                background-color: #ccc
-                transform: rotate(0deg)
-                transition: 4s
-                border: 5px dotted black
-                border-radius: 50%
+//     .container
+//         .canvasContainer
+//             canvas
+//                 padding: 10px
+//                 background-color: #ccc
+//                 transform: rotate(0deg)
+//                 transition: 4s
+//                 border: 5px dotted black
+//                 border-radius: 50%
 
-            img
-                width: 20px
+//             img
+//                 width: 20px
 
-        .actual
-            width: 100%
-            font-size: 15px
+//         .actual
+//             width: 100%
+//             font-size: 15px
 
-            h2
-                font-size: 20px
-                font-weight: 700
+//             h2
+//                 font-size: 20px
+//                 font-weight: 700
 
-            span
-                padding-left: 10px
+//             span
+//                 padding-left: 10px
 
-            .drawnElementsList
-                list-style: none
-                font-size: 15px
+//             .drawnElementsList
+//                 list-style: none
+//                 font-size: 15px
 
-                li:first-child
-                    font-size: 15px
+//                 li:first-child
+//                     font-size: 15px
 
-                li
-                    border-bottom: 2px solid #0069D9
-                    padding-top: 10px
-                    font-size: 12px
+//                 li
+//                     border-bottom: 2px solid #0069D9
+//                     padding-top: 10px
+//                     font-size: 12px
