--- a/style.css
+++ b/style.css
@@ -38,7 +38,11 @@ body {
   min-height: 750px;
   width: 750px;
   heigth: 750px;
-  background-color: #9F9A53;
+  background-color: #F7F9FC;
+  -webkit-box-shadow: -12px -12px 20px 1px white, 12px 1px 25px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: -12px -12px 20px 1px white, 12px 1px 25px 1px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid white;
+  border-left: 1px solid white;
 }
 
 #wheelSide #titleContainer footer {
