--- a/style.sass
+++ b/style.sass
@@ -40,7 +40,10 @@ body
             min-height: 750px
             width: 750px
             heigth: 750px
-            background-color: $csix
+            background-color: $cthree
+            box-shadow: -12px -12px 20px 1px rgba(255,255,255,1), 12px 1px 25px 1px rgba(0,0,0,0.1)
+            border-top: 1px solid white
+            border-left: 1px solid white
 
         footer
             text-align: left
