--- a/style.sass
+++ b/style.sass
@@ -41,7 +41,7 @@ body
             width: 750px
             heigth: 750px
             background-color: $cthree
-            box-shadow: -12px -12px 20px 1px rgba(255,255,255,1), 12px 1px 25px 1px rgba(0,0,0,0.1)
+            box-shadow: -12px -12px 20px 1px rgba(255,255,255,1), 12px 1px 20px 3px rgba(#A2B4C6,0.3)
             border-top: 1px solid white
             border-left: 1px solid white
 
