--- a/style.sass
+++ b/style.sass
@@ -57,7 +57,6 @@ body
                 justify-content: center
                 position: relative
                 canvas
-                    background-color: rgba(255,255,12,0.1)
                     transform: rotate(0deg)
                     transition: 4s
                     border-radius: 50%
@@ -68,11 +67,11 @@ body
 
 #backgroundText
     position: absolute
-    top: -190px
-    left: -50px
+    top: -160px
+    left: -40px
     z-index: 0
     img
-        width: 102vw
+        width: 100vw
 
 #textSide
     background-color: rgba($ctwo, 0.15)
@@ -86,7 +85,7 @@ body
         h1
             font-size: 40px
         #inputs
-            input
+            .option
                 height: 50px
                 border-radius: 15px
                 background-color: $cfour
